# cobot-ws-25

./: .gitignore
include/chess_player_breakdown/: chess_player_node.hpp
src/: chess_player_node.cpp  main.cpp
src/chess/chess-controller/: README.md  c_cpp_properties.json  package.xml  settings.json  setup.cfg  setup.py
src/chess/chess-controller/chess_controller/: chess_controller.py
src/chess/game-manager/: package.xml  setup.py
src/chess/game-manager/game_manager/: game_manager.py
src/chess/piece-identifier/piece_identifier/: piece_identifier.py  yolomodel.py
src/configuration/ar3-bringup/: CMakeLists.txt  cobot0_servo.yaml  demo.rviz
src/configuration/ar3-bringup/config/: demo.rviz
src/configuration/ar3-bringup/launch/: cobot0.launch.py  demo.launch.py  joystick.launch.py  logan.launch.py  two_cobots.launch.py
src/configuration/ar3-bringup/scripts/: test.py
src/configuration/ar3-description/: CMakeLists.txt  README.md  base.stl  link_2.stl  link_4.stl
src/configuration/ar3-description/meshes/visual/: link_0.stl  link_3.stl
src/configuration/ar3-description/urdf/: cobot0.urdf.xacro  cobot1.urdf.xacro  two_cobots.urdf.xacro
src/configuration/ar3-description/urdf/inc/: create_ar3.xacro  create_joint.xacro  create_link.xacro
src/configuration/ar3-description/visual/: gripper.stl  link_1.stl  link_4.stl  link_5.stl
src/configuration/ar3-hardware-interface/src/: ar3_hardware_interface.cpp  messaging.cpp
src/configuration/ar3-moveit-config/single-cobot-moveit-config/: .setup_assistant  CMakeLists.txt  package.xml
src/configuration/ar3-moveit-config/single-cobot-moveit-config/config/: cobot0.ros2_control.xacro  cobot0.srdf  cobot0.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/configuration/ar3-moveit-config/single-cobot-moveit-config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/configuration/ar3-moveit-config/two-cobots-moveit-config/: .setup_assistant  CMakeLists.txt  package.xml
src/configuration/ar3-moveit-config/two-cobots-moveit-config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  two_cobots.ros2_control.xacro  two_cobots.srdf  two_cobots.urdf.xacro
src/configuration/ar3-moveit-config/two-cobots-moveit-config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/configuration/camera-calibration/: README.md  default_cam.yaml
src/configuration/chess-msgs/: CMakeLists.txt  package.xml
src/configuration/chess-msgs/action/: FindBestMove.action
src/configuration/chess-msgs/msg/: CameraPoints.msg  ChessMoveUCI.msg  ChessTime.msg  ClockButtons.msg  CobotEnabled.msg  CobotSpeed.msg  CobotState.msg  Color.msg  EngineInfo.msg  FullFEN.msg  GameConfig.msg  PartialFEN.msg  Point2.msg
src/configuration/chess-msgs/srv/: CorrectCobot.srv  RestartClock.srv  RestartGame.srv  SetGameState.srv  SetTime.srv
src/motion/chess-player/: .gitmodules  CMakeLists.txt  chess_player_node.cpp  motion.cpp  package.xml  play_game.cpp
src/motion/chess-player/include/chess_player/: bt_nodes.hpp  bt_tree.xml  chess_player_node.hpp  result.hpp
src/motion/chess-player/src/: chess_player_node.cpp  main.cpp  motion.cpp  parameters.yaml  play_game.cpp
src/motion/cobot-corrector/: CMakeLists.txt
src/motion/cobot-corrector/include/cobot_corrector/: cobot_corrector_node.hpp
src/motion/cobot-corrector/src/: cobot_corrector.cpp  cobot_corrector_node.cpp  parameters.yaml
src/motion/gripper/: gripper.ino
src/motion/gripper-node/: package.xml  setup.py
src/motion/gripper-node/gripper_node/: gripper_node.py
src/sensors/aruco-transforms/: CMakeLists.txt
src/sensors/aruco-transforms/include/aruco_transforms/: aruco_object_manager.hpp  config.hpp
src/sensors/aruco-transforms/src/: aruco_object_manager.cpp  config.cpp  main.cpp  parameters.yaml
src/sensors/clock-node/: README.md  debug_clock.py  package.xml  setup.cfg  setup.py
src/sensors/clock-node/clock_node/: clock_node.py
src/sensors/ros-ws-bridge/: package.xml  setup.cfg  setup.py
src/sensors/ros-ws-bridge/ros_ws_bridge/: bridge.py
src/sensors/tof-piece-finder/: CMakeLists.txt  README.md  package.xml
src/sensors/tof-piece-finder/src/: parameters.yaml  tof_piece_finder.cpp
src/testing/aruco-tester/: README.md  aruco_debug.py
src/testing/topic-tester/: package.xml  setup.cfg  setup.py
src/testing/topic-tester/topic_tester/: topic_tester.py
