<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>game_manager</name>
  <version>0.0.0</version>
  <description>Source of truth on the current state of the game. Connects to clock over serial.</description>
  <maintainer email="zchampion2020@my.fit.edu">Zach Champion</maintainer>
  <license>GPL-3.0-only</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>chess_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
